src/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@use "@angular/material" as mat;
// Plus imports for other components in your app.

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat.core();

// Define the palettes for your theme using the Material Design palettes available in palette.scss
// (imported above). For each palette, you can optionally specify a default, lighter, and darker
// hue. Available color palettes: https://material.io/design/color/
$shop-tennis-primary: mat.define-palette(mat.$indigo-palette);
$shop-tennis-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);

// The warn palette is optional (defaults to red).
$shop-tennis-warn: mat.define-palette(mat.$red-palette);

// Create the theme object. A theme consists of configurations for individual
// theming systems such as "color" or "typography".
$shop-tennis-theme: mat.define-light-theme(
  (
    color: (
      primary: $shop-tennis-primary,
      accent: $shop-tennis-accent,
      warn: $shop-tennis-warn,
    ),
  )
);

// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
@include mat.all-component-themes($shop-tennis-theme);

/* You can add global styles to this file, and also import other style files */

html,
body {
  height: 100%;
  max-width: 100% !important;
  overflow-x: hidden !important;
}
body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

